Bug 414876 - "[gtk] Unified back/forward drop-down button is too wide" [p=ventnor.bugzillayahoo.com.au (Michael Ventnor) r=Ryan a1.9b3=beltzner]
UltraBlame original commit: 109cd75a225b17fba6c24ca4c8d55e603fe6845d

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -3386,6 +3386,37 @@ important
 #
 back
 -
+forward
+-
+dropmarker
+{
+width
+:
+24px
+;
+}
+#
+back
+-
+forward
+-
+dropmarker
+>
+.
+toolbarbutton
+-
+menu
+-
+dropmarker
+{
+width
+:
+12px
+;
+}
+#
+back
+-
 button
 {
 list
